테스트페이

--- a/Test.html
+++ b/Test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" ng-app="homeApp">
+<html ng-app="homeApp">
 
 <head>
     <title>Hello Spring Boot!</title>
@@ -23,7 +23,6 @@
     <br>
     Full Name: {{firstName + " " + lastName}}
 
-</div>
 </div>
 </body>
 
