--- a/Test.html
+++ b/Test.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
-<html ng-app="homeApp">
+<html>
 
-<head>
-    <title>Hello Spring Boot!</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Smallmiro.GitHub.io : ">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"/>
-    <script type="text/javascript">
-        var homeApp = angular.module('homeApp', []);
-        homeApp.controller("SimpleController", function ($scope) {
-            $scope.firstName = "John";
-            $scope.lastName = "Doe";
-        })
-    </script>
-</head>
-<body>
-<div ng-controller="SimpleController">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    First Name: <input type="text" ng-model="firstName"><br>
-    Last Name: <input type="text" ng-model="lastName"><br>
-    <br>
-    Full Name: {{firstName + " " + lastName}}
+    <title>Smallmiro.GitHub.io</title>
+  </head>
 
-</div>
-</body>
+  <body>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/smallmiro">View on GitHub</a>
+
+          <h1 id="project_title">Smallmiro.GitHub.io</h1>
+          <h2 id="project_tagline"></h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Spring boot web에서 로그에 에러 찍기</h3>
+
+<p>Spring boot로 REST API를 작성하면 기본적으로는 API수행시 에러가 발생해도 Payload에는 표시가 되지만 서버 콘솔에는 아무 것도 찍히지않는다.
+콘솔에 에러를 프린트 하기 위해서는 resource디렉토리에 logback.xml파일을 생성한뒤 아래와 같이 추가해준다.</p>
+
+<pre><code>
+    <logger name="org.springframework.boot" level="error">
+        <appender-ref ref="${log.appender}" />
+    </logger>
+</code></pre>
+
+</section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+
+
+  </body>
 </html>
