--- a/Test.html
+++ b/Test.html
@@ -12,7 +12,14 @@
   </head>
 
   <body>
-
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&appId=442989625726240&version=v2.3";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -37,7 +44,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-
+<div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="5" data-colorscheme="light"></div>
       </section>
     </div>
 
