gitIgnore 설정 추스프링시작하기

--- a/Test.html
+++ b/Test.html
@@ -42,11 +42,6 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
+<div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="1" data-colorscheme="light"></div>
   </body>
 </html>
