gitIgnore 설정 추스프링시작하기

--- a/Test.html
+++ b/Test.html
@@ -42,6 +42,6 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-<div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="1" data-colorscheme="light"></div>
+<div class="fb-comments" data-href="http://smallmiro.github.io/Test.html" data-numposts="1" data-colorscheme="light"></div>
   </body>
 </html>
