--- a/Test.html
+++ b/Test.html
@@ -30,6 +30,17 @@
 
   <body>
 
+        <!-- HEADER -->
+        <div id="header_wrap" class="outer">
+            <header class="inner">
+              <a id="forkme_banner" href="https://github.com/smallmiro">View on GitHub</a>
+
+              <h1 id="project_title">Smallmiro.GitHub.io</h1>
+              <h2 id="project_tagline"></h2>
+
+            </header>
+        </div>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
@@ -43,5 +54,13 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 <div class="fb-comments" data-href="http://smallmiro.github.io/Test.html" data-numposts="1" data-colorscheme="light"></div>
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+  <footer class="inner">
+    <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+  </footer>
+</div>
+
+
   </body>
 </html>
