--- a/Test.html
+++ b/Test.html
@@ -53,7 +53,11 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
+</section>
+</div>
+
 <div class="fb-comments" data-href="http://smallmiro.github.io/Test.html" data-numposts="1" data-colorscheme="light"></div>
+
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
   <footer class="inner">
