--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Smallmiro.GitHub.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <script src="javascript/angular.1.4.2.min.js" lang="javascript"/>
     <title>Smallmiro.GitHub.io</title>
   </head>
 
@@ -16,9 +16,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/smallmiro">View on GitHub</a>
+          <a id="forkme_banner" href="http://shop.lego.com">Go!! Shop lego</a>
 
-          <h1 id="project_title">Smallmiro.GitHub.io</h1>
+          <h1 id="project_title">레고 공홈 가격 비교</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
