--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<header class="inner">
-					<h1 id="project_title">레고 공홈 가격 비교</h1>
+					<h1 id="project_title">..</h1>
 					<h2 id="project_tagline"></h2>
 				</header>
 			</div>
@@ -52,6 +52,9 @@
 							</span>
 						</div>
 					</p>
+					<div class="row">
+				    <div class="col-sm-4">.col-sm-4</div>
+				  </div>
 				</section>
 			</div>
 			<!-- FOOTER  -->
