--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">레고 공홈 가격</a>
+					<a class="navbar-brand" href="#">LEGO</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 
@@ -32,8 +32,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<header class="inner">
-					<h1 id="project_title">..</h1>
-					<h2 id="project_tagline"></h2>
+					<h2 id="project_title">레고 공홈 가격비교</h2>
 				</header>
 			</div>
 		</div>
@@ -42,7 +41,7 @@
 			<div id="main_content_wrap" class="outer">
 				<section id="main_content" class="inner">
 					<h3>
-						<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.<button class='btn btn-default' ng-click="addAlert()">Add Alert</button>
+						<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Let's search!!
 					</h3>
 					<p>
 						<div class="input-group">
@@ -53,14 +52,24 @@
 						</div>
 					</p>
 					<div class="row">
-				    <div class="col-sm-4">.col-sm-4</div>
+				    <div class="col-sm-12" ng-repeat="product in products">
+							<div class="page-header"><h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
+							<div class="col-sm-8">
+								<img src="{{product.image}}" class="img-responsive" >
+							</div>
+							<div class="col-sm-4">
+								<div class="row"  ng-repeat="price in product.prices">
+							    <div class="col-sm-12"><h4>{{price.country | countryImage}} : {{price.price}}({{price.salePrice}})</h4></div>
+								</div>
+							</div>
+						</div>
 				  </div>
 				</section>
 			</div>
 			<!-- FOOTER  -->
 			<div id="footer_wrap" class="outer">
 				<footer class="inner">
-					<p>만든이 <a href="https://pages.github.com">GitHub Pages</a></p>
+					<p>만든이 오준환</p>
 				</footer>
 			</div>
 		</div>
