국기 이미지 필터추

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="row"  ng-repeat="price in product.prices">
-							    <div class="col-sm-12"><h4><img src="{{price.country | countryImage}}" class="img-responsive" > : {{price.price}}({{price.salePrice}})</h4></div>
+							    <div class="col-sm-6"><img src="{{price.country | countryImage}}" height="16" ></div><div class="col-sm-6"><h4> : {{price.price}}({{price.salePrice}})</h4></div>
 								</div>
 							</div>
 						</div>
