--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 							</div>
 							<div class="col-sm-4">
 								<div class="row"  ng-repeat="price in product.prices">
-							    <div class="col-sm-6"><img src="{{price.country | countryImage}}" height="16" ></div><div class="col-sm-6"><h4> : {{price.price}}({{price.salePrice}})</h4></div>
+									<div class="col-sm-4">
+							    <h4><span class="label label-primary"><img src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price}}({{price.salePrice}})</span></h4>
+									</div
 								</div>
 							</div>
 						</div>
