--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 							<div class="col-sm-4">
 								<div class="row"  ng-repeat="price in product.prices">
 									<div class="col-sm-4">
-							    <h4><span class="label label-primary"><img src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price}}({{price.salePrice}})</span></h4>
+										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
+									    <h4><span class="label label-primary"><img src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price}}({{price.salePrice}})</span></h4>
+										</a>
 									</div
 								</div>
 							</div>
