--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</h3>
 					<p>
 						<div class="input-group">
-						  <input type="text" class="form-control" placeholder="Lego shop URL" aria-describedby="basic-addon2" ng-model="shopUrl">
+						  <input type="text" class="form-control" placeholder="Lego shop URL ex)http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 							<span class="input-group-btn">
 								<button class="btn btn-default" type="button" ng-click="getPrice()">Get Price!</button>
 							</span>
