--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 				<section id="main_content" class="inner">
 					<div class="row">
 				    <div class="col-sm-12" ng-repeat="product in products">
-							<div class="page-header"><h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
+							<div class="page-header">
+								<h3>
+									<img src="{{product.categoryImage}}">
+									{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
 							<div class="col-sm-8">
 								<img src="{{product.image}}" class="img-responsive" >
 							</div>
