--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<meta name="description" content="Smallmiro.GitHub.io : ">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="레고 공홈 가격비교" />
+		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
+		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
+		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
+		<meta name="description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
+
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 		<script src="js/controller/home.js"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-		<title>Smallmiro.GitHub.io</title>
+		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -57,7 +64,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Lego shop URL ex) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 						<span class="input-group-btn">
-							<button class="btn btn-default" type="button" ng-click="getPrice()">Get Price!</button>
+							<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#search_content" aria-expanded="false" aria-controls="collapseExample" ng-click="getPrice()">Get Price!</button>
 						</span>
 					</div>
 				</p>
@@ -66,12 +73,12 @@
 		<div class="container">
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
-				<section id="main_content" class="inner">
+				<section id="search_content" class="collapse" >
 					<div class="row">
 				    <div class="col-sm-12" ng-repeat="product in products">
 							<div class="page-header">
 								<h3>
-									<img src="{{product.categoryImage}}">
+									<img ngSrc="{{product.categoryImage}}">
 									{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
 							<div class="col-sm-8">
 								<img src="{{product.image}}" class="img-responsive" >
@@ -88,6 +95,22 @@
 						</div>
 				  </div>
 				</section>
+<!--
+				<section id="main_content" class="inner">
+					<div class="row">
+					  <div class="col-sm-6 col-md-4">
+					    <div class="thumbnail">
+					      <img src="..." alt="...">
+					      <div class="caption">
+					        <h3>Thumbnail label</h3>
+					        <p>...</p>
+					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+				</section>
+-->
 			</div>
 			<!-- FOOTER  -->
 			<div id="footer_wrap" class="outer">
