--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 				    <div class="col-sm-12" ng-repeat="product in products">
 							<div class="page-header">
 								<h3>
-									<img ngSrc="{{product.categoryImage}}">
+									<img ng-src="{{product.categoryImage}}">
 									{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
 							<div class="col-sm-8">
-								<img src="{{product.image}}" class="img-responsive" >
+								<img ng-src="{{product.image}}" class="img-responsive" >
 							</div>
 							<div class="col-sm-4">
 								<div class="row"  ng-repeat="price in product.prices">
