[오준환][NOBTS] 기타 등등 설

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<div class="row"  ng-repeat="price in product.prices">
 									<div class="col-sm-12">
 										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-									    <h4><span class="label label-primary"><img src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
+									    <h4><span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
 										</a>
 									</div
 								</div>
