--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 								<img ng-src="{{product.image}}" class="img-responsive" >
 							</div>
 							<div class="col-sm-8">
-								<div class="row"  ng-repeat="price in product.prices">
-									<div class="col-sm-4">
+								<div class="row">
+									<div class="col-sm-4" ng-repeat="price in product.prices">
 										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
 									    <h4><span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" ></span><span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
 										</a>
