--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
 							<div class="col-sm-8">
 								<div class="row">
 									<div class="col-sm-6" ng-repeat="price in product.prices">
-										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-									    <h4><span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span><span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
-										</a>
-									</div
+
+								    <h4><span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" >
+											<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">{{price.country | countryName}}</a>
+										</span><span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
+
+									</div>
 								</div>
 							</div>
 						</div>
