--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
 							<div class="col-sm-8">
 								<div class="row">
 									<div class="col-sm-6" ng-repeat="price in product.prices">
-
-								    <h4>
-											<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-												<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
-											</a>
-										<span>{{price.price | number}}({{price.salePrice | number}}) : {{price.krw | number:0}} krw</span></h4>
-
+										<div class="col-sm-3">
+									    <h4>
+												<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
+													<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
+												</a>
+											</h4>
+										</div>
+										<div class="col-sm-3">{{price.price | number}}</div>
+										<div class="col-sm-3">{{price.salePrice | number}}</div>
+										<div class="col-sm-3">{{price.krw | number:0}} krw</div>
 									</div>
 								</div>
 							</div>
