--- a/index.html
+++ b/index.html
@@ -86,16 +86,20 @@
 							<div class="col-sm-8">
 								<div class="row">
 									<div class="col-sm-6" ng-repeat="price in product.prices">
-										<div class="col-sm-3">
-									    <h4>
-												<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-													<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
-												</a>
-											</h4>
+										<div class="row">
+											<div class="col-sm-12">
+										    <h4>
+													<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
+														<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
+													</a>
+												</h4>
+											</div>
 										</div>
-										<div class="col-sm-3">{{price.price | number}}</div>
-										<div class="col-sm-3">{{price.salePrice | number}}</div>
-										<div class="col-sm-3">{{price.krw | number:0}} krw</div>
+										<div class="row">
+											<div class="col-sm-4"><h4>{{price.price | number}}</h4></div>
+											<div class="col-sm-4"><h4>{{price.salePrice | number}}</h4></div>
+											<div class="col-sm-4"><h4>{{price.krw | number:0}} krw</h4></div>
+										<div>
 									</div>
 								</div>
 							</div>
