--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 												</a>
 											</h4>
 										</div>
-										<div class="col-sm-6" align="middle right"><h4{{price.krw | number:0}} krw</a></div>
+										<div class="col-sm-6" align="middle right"><h4>{{price.krw | number:0}} krw</h4></div>
 									</div>
 								</div>
 							</div>
