--- a/index.html
+++ b/index.html
@@ -83,39 +83,43 @@
 							<div class="col-sm-4">
 								<img ng-src="{{product.image}}" class="img-responsive" >
 							</div>
-							<div class="col-sm-8">
-								<div class="row">
-									<div class="col-sm12">
-										<div class="col-sm-6"  ng-repeat="price in product.prices">
-									    <h4>
-												<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-													<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
-												</a>
-											</h4>
-										</div>
-										<div class="col-sm-6" align="middle right"><h4>{{price.krw | number:0}} krw</h4></div>
-									</div>
+							<div class="col-sm-8"  ng-repeat="price in product.prices">
+
+								<div class="col-sm-6" data-ng-show="$last && ($index < 4)">
+							    <h4>
+										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
+											<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
+										</a>
+									</h4>
 								</div>
+								<div class="col-sm-6" align="middle right"  data-ng-show="$last && ($index < 4)"><h4>{{price.krw | number:0}} krw</h4></div>
+
 							</div>
 						</div>
 				  </div>
 				</section>
-				<!--
+
 				<section id="main_content" class="inner">
 					<div class="row">
-					  <div class="col-sm-6 col-md-4">
+					  <div class="col-sm-6 col-md-4"  ng-repeat="product in products">
 					    <div class="thumbnail">
-					      <img ng-src="..." alt="...">
+					      <img ng-src="{{product.image}}">
 					      <div class="caption">
-					        <h3>Thumbnail label</h3>
-					        <p>...</p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
+					        <p>
+										<table>
+											<tr ng-repeat="price in product.prices">
+												<td data-ng-show="$last && ($index < 4)"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</td>
+												<td align="middle right" data-ng-show="$last && ($index < 4)">{{price.krw | number:0}} krw</td>
+											</tr>
+										</table>
+									</p>
 					      </div>
 					    </div>
 					  </div>
 					</div>
 				</section>
-				-->
+
 
 			</div>
 
