--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
 					        <p>
 										<table>
-											<tr ng-repeat="price in product.prices">
+											<tr ng-repeat="price in product.prices by $index">
 												<td data-ng-show="$last && ($index < 4)"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</td>
-												<td align="middle right" data-ng-show="$last && ($index < 4)">{{price.krw | number:0}} krw</td>
+												<td align="middle right" data-ng-show="($index < 4)">{{price.krw | number:0}} krw</td>
 											</tr>
 										</table>
 									</p>
