--- a/index.html
+++ b/index.html
@@ -73,33 +73,7 @@
 		<div class="container">
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
-				<section id="search_content" class="inner" >
-					<div class="row">
-				    <div class="col-sm-12" ng-repeat="product in products">
-							<div class="page-header">
-								<h3>
-									<img ng-src="{{product.categoryImage}}">
-									{{product.name}} <small>(Item:{{product.prodCode}})</small></h3></div>
-							<div class="col-sm-4">
-								<img ng-src="{{product.image}}" class="img-responsive" >
-							</div>
-							<div class="col-sm-8"  ng-repeat="price in product.prices">
-
-								<div class="col-sm-6" data-ng-show="$last && ($index < 4)">
-							    <h4>
-										<a href="{{product | shopUrl:price.country}}" target="{{price.country}}">
-											<span class="label label-primary"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span>
-										</a>
-									</h4>
-								</div>
-								<div class="col-sm-6" align="middle right"  data-ng-show="$last && ($index < 4)"><h4>{{price.krw | number:0}} krw</h4></div>
-
-							</div>
-						</div>
-				  </div>
-				</section>
-
-				<section id="main_content" class="inner">
+				<section id="search_content" class="inner">
 					<div class="row">
 					  <div class="col-sm-6 col-md-4"  ng-repeat="product in products">
 					    <div class="thumbnail">
@@ -109,7 +83,7 @@
 					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
 					        <p>
 										<table>
-											<tr ng-repeat="price in product.prices by $index">
+											<tr ng-repeat="price in product.prices">
 												<td data-ng-show="$last && ($index < 4)"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</td>
 												<td align="middle right">{{price.krw | number:0}} krw</td>
 											</tr>
