--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
 					      <div class="caption">
 					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
 					        <p>
-										<table>
+										<table width=100%>
 											<tr ng-repeat="price in product.prices">
-												<td ><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</td>
+												<td ><span class="label label-{{price.availabilityMessage | status}}" alt={{price.availabilityMessage}}><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
 												<td align="middle right">{{price.krw | number:0}} krw</td>
-												<td align="middle right">{{price.availabilityMessage}}</td>
 											</tr>
 										</table>
 									</p>
