--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					        <p>
 										<table width=100%>
 											<tr ng-repeat="price in product.prices">
-												<td ><span class="label label-{{price.availabilityMessage | status}}" alt={{price.availabilityMessage}}><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
+												<td ><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
 												<td align="middle right">{{price.krw | number:0}} krw</td>
 											</tr>
 										</table>
