--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 											<tr ng-repeat="price in product.prices">
 												<td ><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
 												<td align="right">{{price.krw | number:0}} krw
-													<a href="{{product | shopUrl:price.country}}"><button type="button">Go!</button></a>
+													<a href="{{product | shopUrl:price.country}}"><button type="button" class="btn btn-info">Go!</button></a>
 												</td>
 											</tr>
 										</table>
