--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
-		<script src="js/controller/home.js?20150716"></script>
+		<script src="js/controller/home.js?20150716001"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
@@ -88,6 +88,10 @@
 												<td align="right">{{price.krw | number:0}} krw
 													<a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a>
 												</td>
+											</tr>
+											<tr>
+												<td>평균</td>
+												<td align="right">{{product.avg| number:0}} krw</td>
 											</tr>
 										</table>
 									</p>
