--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
 					        <p>
 										<table width=100%>
-											<tr ng-repeat="price in product.prices">
-												<td ng-hide="!(price.krw > 0)"><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
-												<td ng-hide="!(price.krw > 0)" align="right">{{price.krw | number:0}} krw
+											<tr ng-repeat="price in product.prices" ng-hide="!(price.krw > 0)">
+												<td><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
+												<td align="right">{{price.krw | number:0}} krw
 													<a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a>
 												</td>
 											</tr>
