--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="topApp">
 	<head>
 		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta property="og:type" content="website" />
@@ -13,7 +14,7 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
-		<script src="js/controller/home.js?20150716003"></script>
+		<script src="js/controller/home.js?20150717001"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
 		<script>
@@ -74,30 +75,49 @@
 			<!-- MAIN CONTENT -->
 			<div id="main_content_wrap" class="outer">
 				<section id="search_content" class="inner">
-					<div class="row">
-					  <div class="col-sm-6 col-md-4"  ng-repeat="product in products">
-					    <div class="thumbnail">
-								<img ng-src="{{product.categoryImage}}">
-					      <img ng-src="{{product.image}}">
-					      <div class="caption">
-					        <h3>{{product.name}} <small>(Item:{{product.prodCode}})</small></h3>
-					        <p>
-										<table width=100%>
-											<tr ng-repeat="price in product.prices" ng-hide="!(price.krw > 0)">
-												<td><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
-												<td align="right">{{price.krw | number:0}} krw
-													<a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a>
-												</td>
-											</tr>
-											<tr>
-												<td>평균</td>
-												<td align="right">{{product.avg| number:0}} krw</td>
-											</tr>
-										</table>
-									</p>
-					      </div>
-					    </div>
-					  </div>
+					<div class="row" ng-repeat="product in products">
+
+					  <div class="col-sm-6 col-md-4">
+								<div class="panel panel-default">
+								<div class="panel-heading"><img ng-src="{{product.categoryImage}}"></div>
+								<div class="panel-body">
+
+							    <div class="thumbnail">
+							      <img ng-src="{{product.image}}">
+							      <div class="caption">
+							        <h3>{{product.name}}</h3>
+							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
+							      </div>
+									</div>
+									</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-8">
+							<div class="panel panel-default">
+							<!-- Default panel contents -->
+						   <div class="panel-heading">
+								 <h2>가격 및 상태 정보 [{{product.badgeName}}]</h2>
+							 </div>
+						   <div class="panel-body">
+						     <p><h3>카테고리 : {{product.category}}</p>
+									 <p>item : {{product.prodCode}}</h3></p>
+						   </div>
+						   <!-- Table -->
+						   <table class="table">
+									 <tr ng-repeat="price in product.prices" ng-hide="!(price.krw > 0)">
+								 		<td align="center"><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
+										<td align="left">{{price.availabilityMessage}}</td>
+								 		<td align="right">{{price.krw | number:0}} krw</td>
+										<td align="left">{{price.saleStatus}}</tb>
+										<td><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
+								 	</tr>
+								 	<tr>
+								 		<td>평균</td>
+								 		<td align="right">{{product.avg| number:0}} krw</td>
+								 	</tr>
+						   </table>
+						</div>
+				 </div>
 					</div>
 				</section>
 
