--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						   </div>
 						   <!-- Table -->
 						   <table class="table">
-									 <tr ng-repeat="price in product.prices" ng-hide="!(price.krw > 0 && price.availabilityMessage != 'Retired product')">
+									 <tr ng-repeat="price in product.prices" ng-hide="checkShow(price)">
 								 		<td align="center"><span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}"><img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}</span></td>
 										<td align="left">{{price.availabilityMessage}}</td>
 								 		<td align="right">{{price.krw | number:0}} krw</td>
