--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
-		<script src="js/controller/home.js?20150717005"></script>
+		<script src="js/controller/home.js?20150717006"></script>
 		<script src="js/ngActivityIndicator.min.js"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/ngActivityIndicator.css">
+		<link rel="stylesheet" href="css/ngActivityIndicator.min.css">
 		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
