--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
 		<meta name="description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
+		<meta name="keywords" content="레고,가격비교,레고공홈,레고제택크,가격비교,레고품절,LEGO,LEGO SHOP">
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
