--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 										<td><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
 								 	</tr>
 								 	<tr class="info">
-								 		<td>평균</td>
-								 		<td align="right">{{product.avg| number:0}} krw</td>
+								 		<td class="text-center">평균</td>
+								 		<td colspan="2" class="text-right">{{product.avg| number:0}} krw</td>
 								 	</tr>
 						   </table>
 						 	</div>
