--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<div class="panel panel-default">
 							<!-- Default panel contents -->
 						   <div class="panel-heading">
-								 <h3>가격 및 상태 정보 [{{product.badgeName}}]</h3>
+								 <h3><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 </h3>
 							 </div>
 						   <div class="panel-body">
 								 <blockquote>
