디자인변경..........

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<input type="text" class="form-control" placeholder="Lego shop URL ex) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 						<span class="input-group-btn">
 							<div ng-activity-indicator="CircledWhite"></div>
-							<button ng-show="!AILoading" class="btn btn-default" type="button" ng-click="getPrice()">Get Price!</button>
+							<button ng-show="!AILoading" class="btn btn-info" type="button" ng-click="getPrice()">Get Price!</button>
 						</span>
 					</div>
 				</p>
