--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<header class="inner">
-					<h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2><div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+					<h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2>
 				</header>
 				<p>
 					<div class="input-group">
@@ -91,8 +91,8 @@
 						</span>
 					</div>
 				</p>
-				<p>
-
+				<p class="text-right">
+					<div class="fb-like" data-href="http://smallmiro.github.io" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 				</p>
 			</div>
 		</div>
