--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								     </div>
 								     <div class="col-sm-4">
 								       <!--Body content-->
-											 <div class="fb-share-button" data-href="http://smallmiro.github.io/?prodcode={{product.prodCode}}" datat-image="{{product.image}}" data-title="{{product.category}} :: {{product.name}}" data-layout="box_count"></div>
+											 <div class="fb-share-button" data-href="http://smallmiro.github.io/?prodcode={{product.prodCode}}" data-layout="box_count"></div>
 								     </div>
 								   </div>
 
