--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
+
 		<script src="js/controller/home.js?20150721001"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<title>레고 공홈 가격비교</title>
@@ -78,7 +79,7 @@
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <!--<li><a href="/intro.html">About</a></li>-->
+            <li><a href="/intro.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
 			</div>
